[package]
name = "bp-electrum"
version = "0.12.0-beta.5"
authors = ["Alekos Filini <alekos.filini@gmail.com>", "Dr Maxim Orlovsky <orlovsky@lnp-bp.org>"]
license = "MIT"
homepage = "https://github.com/BP-WG/bp-electrum-client"
repository = "https://github.com/BP-WG/bp-electrum-client"
documentation = "https://docs.rs/bp-electrum-client/"
description = "Bitcoin Electrum client library. Supports plaintext, TLS and Onion servers."
keywords = ["bitcoin", "electrum"]
readme = "README.md"
edition = "2021"
rust-version = "1.80.0"

[lib]
name = "electrum"
path = "src/lib.rs"

[dependencies]
amplify = "4.8.0"
sha2 = "0.10.8"
log = "^0.4"
bp-core = { version = "0.12.0-beta.5", features = ["serde"] }
serde = { version = "^1.0", features = ["derive"] }
serde_json = { version = "^1.0" }

# Optional dependencies
openssl = { version = "0.10", optional = true }
rustls = { version = "0.23", optional = true }
webpki-roots = { version = "0.26", optional = true }

byteorder = { version = "1.0", optional = true }

[dev-dependencies]
bp-invoice = "0.12.0-beta.5"

[target.'cfg(unix)'.dependencies]
libc = { version = "0.2", optional = true }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["winsock2"], optional = true }

[features]
default = ["proxy", "use-rustls"]
minimal = []
debug-calls = []
proxy = ["byteorder", "winapi", "libc"]
use-rustls = ["webpki-roots", "rustls"]
use-openssl = ["openssl"]
